Upgrade to JDK 20, default images to HTTPS, render streamed images